# motor_controllers

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: FindBCM2835.cmake  Findi2c.cmake
include/motor_controllers/communication/: bcm2835_binary_channel.h  bcm2835_channel.h  bcm2835_communication.h  bcm2835_interface.h  bcm2835_pwm_channel.h  channel_builder.h  communication_channel.h  communication_channel_builder.h  communication_interface.h  i_binary_signal_channel.h  i_communication_interface.h  i_pwm_signal_channel.h  i_signal_channel.h  pca9685_channel.h  pca9685_communication.h  pca9685_communication.hpp  pca9685_interface.h  pigpio_binary_channel.h  pigpio_channel_modes.h  pigpio_interface.h  pigpio_pwm_channel.h
include/motor_controllers/communication/bcm2835/: bcm2835_binary_channel.h  bcm2835_interface.h  bcm2835_pwm_channel.h
include/motor_controllers/communication/pca9685/: pca9685_channel.h  pca9685_interface.h
include/motor_controllers/communication/pigpio/: pigpio_binary_channel.h  pigpio_interface.h  pigpio_pwm_channel.h
include/motor_controllers/encoder/: encoder.h
include/motor_controllers/motor/: continuous_motor_interface.h  dc_motor.h  dc_motor_factory.h  motor_interface.h  servo_motor_interface.h
scripts/: run_simple_dc_motor.py
src/: CMakeLists.txt
src/communication/: CMakeLists.txt  bcm2835_binary_channel.cpp  bcm2835_channel.cpp  bcm2835_communication.cpp  bcm2835_interface.cpp  bcm2835_pwm_channel.cpp  communication_channel.cpp  i_signal_channel.cpp  pca9685_channel.cpp  pca9685_communication.cpp  pca9685_interface.cpp  pigpio_binary_channel.cpp  pigpio_interface.cpp  pigpio_pwm_channel.cpp
src/communication/bcm2835/: bcm2835_binary_channel.cpp  bcm2835_interface.cpp  bcm2835_pwm_channel.cpp
src/communication/pca9685/: pca9685_channel.cpp  pca9685_interface.cpp
src/communication/pigpio/: pigpio_binary_channel.cpp  pigpio_interface.cpp  pigpio_pwm_channel.cpp
src/encoder/: CMakeLists.txt  encoder.cpp
src/examples/: CMakeLists.txt  dc_motor_with_encoder.cpp  simple_dc_motor.cpp  simple_encoder.cpp  simple_event_detect_pins.cpp  simple_read_pins.cpp  simple_servo.cpp
src/examples/bcm2835/: CMakeLists.txt  dc_motor_with_encoder.cpp  simple_dc_motor.cpp  simple_encoder.cpp  simple_event_detect_pins.cpp  simple_read_pins.cpp
src/examples/pca9685/: CMakeLists.txt  simple_servo.cpp
src/examples/pigpio/: CMakeLists.txt  pigpio_dc_motor.cpp  pigpio_dc_motor_factory.cpp
src/motor/: CMakeLists.txt  dc_motor.cpp
src/nodes/: CMakeLists.txt  dc_motor_with_encoder.cpp  simple_dc_example.cpp  simple_encoder_example.cpp  simple_event_detect_pins.cpp  simple_servo_control_node.cpp  simple_servo_example.cpp
swig-python/: .gitignore  CMakeLists.txt  bcm2835.i  communication.i  encoder.i  std_future.i  std_unique_ptr.i
swig-python/scripts/: dc_motor_with_encoder.py
